src/main/antlr4/.antlr/TarbaloParser.java
// Generated from c:/Users/crebo/OneDrive/Documentos/Faculdade/Compiladores/mini-compilador/src/main/antlr4/Tarbalo.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TarbaloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO=1, FIM=2, INTEIRO=3, DECIMAL=4, CARACTERE=5, TEXTO_TIPO=6, BOOLEANO_TIPO=7, 
		VAZIO=8, FUNCAO=9, RETORNE=10, LEIA=11, ESCREVA=12, SE=13, SENAO=14, ENQUANTO=15, 
		FACA=16, PARA=17, PARE=18, CONTINUAR=19, VERDADEIRO=20, FALSO=21, SOMA_ATRIBUICAO=22, 
		SUBTRACAO_ATRIBUICAO=23, MULT_ATRIBUICAO=24, DIV_ATRIBUICAO=25, MOD_ATRIBUICAO=26, 
		INCREMENTO=27, DECREMENTO=28, MAIS=29, MENOS=30, MULT=31, DIVINT=32, DIV=33, 
		MOD=34, CONCAT=35, ATRIBUICAO=36, MENOR=37, MAIOR=38, MENORIGUAL=39, MAIORIGUAL=40, 
		IGUAL=41, DIFERENTE=42, NAO=43, E=44, OU=45, XOR=46, ABREPARENTE=47, FECHAPARENTE=48, 
		ABRECHAVE=49, FECHACHAVE=50, ABRECOLCHETE=51, FECHACOLCHETE=52, VIRGULA=53, 
		PONTIVIRGULA=54, PONTO=55, NUMDEC=56, NUM=57, CHAR=58, STRING=59, ID=60, 
		COMENTARIO_LINHA=61, COMENTARIO_BLOCO=62, WS=63;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_declaracao = 2, RULE_declaracaoVariavel = 3, 
		RULE_variavel = 4, RULE_tipoVariavel = 5, RULE_tipoRetorno = 6, RULE_dimensaoDeclaracao = 7, 
		RULE_acessoVetor = 8, RULE_acessoDimensao = 9, RULE_declaracaoFuncao = 10, 
		RULE_parametros = 11, RULE_parametro = 12, RULE_blocoPrincipal = 13, RULE_bloco = 14, 
		RULE_comando = 15, RULE_leitura = 16, RULE_escrita = 17, RULE_destinoAtribuicao = 18, 
		RULE_atribuicao = 19, RULE_incremento = 20, RULE_decremento = 21, RULE_cmdSe = 22, 
		RULE_cmdEnquanto = 23, RULE_cmdFacaEnquanto = 24, RULE_cmdPara = 25, RULE_atribuicaoPara = 26, 
		RULE_atualizacaoPara = 27, RULE_incrementoPara = 28, RULE_decrementoPara = 29, 
		RULE_atribuicaoCompostaPara = 30, RULE_retorno = 31, RULE_pare = 32, RULE_continuar = 33, 
		RULE_expressao = 34, RULE_expressaoOu = 35, RULE_expressaoXor = 36, RULE_expressaoE = 37, 
		RULE_expressaoNegacao = 38, RULE_expressaoRelacional = 39, RULE_expressaoAditiva = 40, 
		RULE_expressaoMultiplicativa = 41, RULE_expressaoUnaria = 42, RULE_operando = 43, 
		RULE_chamadaFuncao = 44, RULE_argumentos = 45, RULE_operadorRelacional = 46, 
		RULE_operadorAtribuicaoComposta = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "declaracao", "declaracaoVariavel", "variavel", 
			"tipoVariavel", "tipoRetorno", "dimensaoDeclaracao", "acessoVetor", "acessoDimensao", 
			"declaracaoFuncao", "parametros", "parametro", "blocoPrincipal", "bloco", 
			"comando", "leitura", "escrita", "destinoAtribuicao", "atribuicao", "incremento", 
			"decremento", "cmdSe", "cmdEnquanto", "cmdFacaEnquanto", "cmdPara", "atribuicaoPara", 
			"atualizacaoPara", "incrementoPara", "decrementoPara", "atribuicaoCompostaPara", 
			"retorno", "pare", "continuar", "expressao", "expressaoOu", "expressaoXor", 
			"expressaoE", "expressaoNegacao", "expressaoRelacional", "expressaoAditiva", 
			"expressaoMultiplicativa", "expressaoUnaria", "operando", "chamadaFuncao", 
			"argumentos", "operadorRelacional", "operadorAtribuicaoComposta"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'prog'", "'fimprog'", "'int'", "'dec'", "'car'", "'texto'", "'booleano'", 
			"'vazio'", "'func'", "'retorne'", "'leia'", "'escreva'", "'se'", "'senao'", 
			"'enquanto'", "'faca'", "'para'", "'pare'", "'continue'", "'verdadeiro'", 
			"'falso'", "'+:'", "'-:'", "'*:'", "'/:'", "'%:'", "'++'", "'--'", "'+'", 
			"'-'", "'*'", "'//'", "'/'", "'%'", "'&'", "':'", "'<'", "'>'", "'<='", 
			"'>='", "'='", "'!='", "'nao'", "'e'", "'ou'", "'xor'", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "','", "';'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INICIO", "FIM", "INTEIRO", "DECIMAL", "CARACTERE", "TEXTO_TIPO", 
			"BOOLEANO_TIPO", "VAZIO", "FUNCAO", "RETORNE", "LEIA", "ESCREVA", "SE", 
			"SENAO", "ENQUANTO", "FACA", "PARA", "PARE", "CONTINUAR", "VERDADEIRO", 
			"FALSO", "SOMA_ATRIBUICAO", "SUBTRACAO_ATRIBUICAO", "MULT_ATRIBUICAO", 
			"DIV_ATRIBUICAO", "MOD_ATRIBUICAO", "INCREMENTO", "DECREMENTO", "MAIS", 
			"MENOS", "MULT", "DIVINT", "DIV", "MOD", "CONCAT", "ATRIBUICAO", "MENOR", 
			"MAIOR", "MENORIGUAL", "MAIORIGUAL", "IGUAL", "DIFERENTE", "NAO", "E", 
			"OU", "XOR", "ABREPARENTE", "FECHAPARENTE", "ABRECHAVE", "FECHACHAVE", 
			"ABRECOLCHETE", "FECHACOLCHETE", "VIRGULA", "PONTIVIRGULA", "PONTO", 
			"NUMDEC", "NUM", "CHAR", "STRING", "ID", "COMENTARIO_LINHA", "COMENTARIO_BLOCO", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tarbalo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TarbaloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(TarbaloParser.INICIO, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public BlocoPrincipalContext blocoPrincipal() {
			return getRuleContext(BlocoPrincipalContext.class,0);
		}
		public TerminalNode FIM() { return getToken(TarbaloParser.FIM, 0); }
		public TerminalNode PONTO() { return getToken(TarbaloParser.PONTO, 0); }
		public TerminalNode EOF() { return getToken(TarbaloParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(INICIO);
			setState(97);
			declaracoes();
			setState(98);
			blocoPrincipal();
			setState(99);
			match(FIM);
			setState(100);
			match(PONTO);
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					declaracao();
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoVariavelContext declaracaoVariavel() {
			return getRuleContext(DeclaracaoVariavelContext.class,0);
		}
		public DeclaracaoFuncaoContext declaracaoFuncao() {
			return getRuleContext(DeclaracaoFuncaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEIRO:
			case DECIMAL:
			case CARACTERE:
			case TEXTO_TIPO:
			case BOOLEANO_TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				declaracaoVariavel();
				}
				break;
			case FUNCAO:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				declaracaoFuncao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVariavelContext extends ParserRuleContext {
		public TipoVariavelContext tipoVariavel() {
			return getRuleContext(TipoVariavelContext.class,0);
		}
		public List<VariavelContext> variavel() {
			return getRuleContexts(VariavelContext.class);
		}
		public VariavelContext variavel(int i) {
			return getRuleContext(VariavelContext.class,i);
		}
		public TerminalNode PONTO() { return getToken(TarbaloParser.PONTO, 0); }
		public List<TerminalNode> VIRGULA() { return getTokens(TarbaloParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(TarbaloParser.VIRGULA, i);
		}
		public DeclaracaoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVariavel; }
	}

	public final DeclaracaoVariavelContext declaracaoVariavel() throws RecognitionException {
		DeclaracaoVariavelContext _localctx = new DeclaracaoVariavelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			tipoVariavel();
			setState(114);
			variavel();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(115);
				match(VIRGULA);
				setState(116);
				variavel();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(PONTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariavelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TarbaloParser.ID, 0); }
		public List<DimensaoDeclaracaoContext> dimensaoDeclaracao() {
			return getRuleContexts(DimensaoDeclaracaoContext.class);
		}
		public DimensaoDeclaracaoContext dimensaoDeclaracao(int i) {
			return getRuleContext(DimensaoDeclaracaoContext.class,i);
		}
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ABRECOLCHETE) {
				{
				{
				setState(125);
				dimensaoDeclaracao();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoVariavelContext extends ParserRuleContext {
		public TerminalNode INTEIRO() { return getToken(TarbaloParser.INTEIRO, 0); }
		public TerminalNode DECIMAL() { return getToken(TarbaloParser.DECIMAL, 0); }
		public TerminalNode TEXTO_TIPO() { return getToken(TarbaloParser.TEXTO_TIPO, 0); }
		public TerminalNode CARACTERE() { return getToken(TarbaloParser.CARACTERE, 0); }
		public TerminalNode BOOLEANO_TIPO() { return getToken(TarbaloParser.BOOLEANO_TIPO, 0); }
		public TipoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoVariavel; }
	}

	public final TipoVariavelContext tipoVariavel() throws RecognitionException {
		TipoVariavelContext _localctx = new TipoVariavelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipoVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 248L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoRetornoContext extends ParserRuleContext {
		public TipoVariavelContext tipoVariavel() {
			return getRuleContext(TipoVariavelContext.class,0);
		}
		public TerminalNode VAZIO() { return getToken(TarbaloParser.VAZIO, 0); }
		public TipoRetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoRetorno; }
	}

	public final TipoRetornoContext tipoRetorno() throws RecognitionException {
		TipoRetornoContext _localctx = new TipoRetornoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipoRetorno);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEIRO:
			case DECIMAL:
			case CARACTERE:
			case TEXTO_TIPO:
			case BOOLEANO_TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				tipoVariavel();
				}
				break;
			case VAZIO:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(VAZIO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DimensaoDeclaracaoContext extends ParserRuleContext {
		public TerminalNode ABRECOLCHETE() { return getToken(TarbaloParser.ABRECOLCHETE, 0); }
		public TerminalNode NUM() { return getToken(TarbaloParser.NUM, 0); }
		public TerminalNode FECHACOLCHETE() { return getToken(TarbaloParser.FECHACOLCHETE, 0); }
		public DimensaoDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensaoDeclaracao; }
	}

	public final DimensaoDeclaracaoContext dimensaoDeclaracao() throws RecognitionException {
		DimensaoDeclaracaoContext _localctx = new DimensaoDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dimensaoDeclaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ABRECOLCHETE);
			setState(138);
			match(NUM);
			setState(139);
			match(FECHACOLCHETE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AcessoVetorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TarbaloParser.ID, 0); }
		public List<AcessoDimensaoContext> acessoDimensao() {
			return getRuleContexts(AcessoDimensaoContext.class);
		}
		public AcessoDimensaoContext acessoDimensao(int i) {
			return getRuleContext(AcessoDimensaoContext.class,i);
		}
		public AcessoVetorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acessoVetor; }
	}

	public final AcessoVetorContext acessoVetor() throws RecognitionException {
		AcessoVetorContext _localctx = new AcessoVetorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_acessoVetor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				acessoDimensao();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ABRECOLCHETE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AcessoDimensaoContext extends ParserRuleContext {
		public TerminalNode ABRECOLCHETE() { return getToken(TarbaloParser.ABRECOLCHETE, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode FECHACOLCHETE() { return getToken(TarbaloParser.FECHACOLCHETE, 0); }
		public AcessoDimensaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acessoDimensao; }
	}
